k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-frontend
  namespace: software-center
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-frontend
  template:
    metadata:
      labels:
        app: catalog-frontend
    spec:
      containers:
        - name: catalog-frontend
          image: jeffrygonzalez/software-angular-demo:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 4Gb
            limits:
              cpu: 1000m
              memory: 8Gb
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: catalog-frontend
  namespace: software-center
spec:
  selector:
    app: catalog-frontend
  ports:
    - port: 80
      targetPort: 80
